<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">

    <android.support.v7.widget.Toolbar
        android:id="@+id/myProfileToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/my_profile" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myProfileToolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myProfileToolbar">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:cardCornerRadius="8dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/profileIV"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/profile_picture"
                        android:contentDescription="@string/content_description"/>

            </android.support.v7.widget.CardView>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/profile_name"
                android:textSize="@dimen/textview_size"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_medium"/>

            <View
                android:layout_marginTop="20dp"
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_android"
                android:textSize="@dimen/textview_size"
                android:fontFamily="@font/roboto_light"/>

            <TextView
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="@dimen/textview_size"
                android:fontFamily="@font/roboto_light"/>

            <TextView
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_email"
                android:textSize="@dimen/textview_size"
                android:fontFamily="@font/roboto_light"/>

            <TextView
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_phone"
                android:textSize="@dimen/textview_size"
                android:fontFamily="@font/roboto_light"/>

            <TextView
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_slack"
                android:textSize="@dimen/textview_size"
                android:fontFamily="@font/roboto_light"/>

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>